--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,3 +1,3 @@
 body {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+	font-family: Arial, Helvetica, sans-serif;
 }
